Base index template update

--- a/index.html
+++ b/index.html
@@ -7,3 +7,6 @@
 	<body>
 		<!-- Content goes here -->
 		<h1>Hi I'm Fateh!</h1>
+		<img src="images/Fateh.jpeg" alt="picture of fateh" width="288" height="512">
+
+		<h2>About Me...</h2>
